
 o Graphviz: new signature GraphWithDotAttrs
 o Improvements of Dgraph
 o Configure: better test for detecting lablgtk
 o OcamlGraph is now installed by default in `ocamlc -where`/ocamlgraph
 o Viewgraph is now packed in a single module Viewgraph (break compatibility
   with previous version)
 o Dgraph is now packed in a single module Dgraph (break compatibility with
   previous version)
 o Makefile: fixed bug when the installation directory of binaries does not
             exist 
 o Makefile: fixed bug of ocamldep under Windows

version 1.2, August 31, 2009
----------------------------
 o experimental: new GTK-based graph viewer called Dgraph 
   (viewGraph is now deprecated)
 o added Delaunay.iter_triangles (not of use in Ocamlgraph, actually)

version 1.1, June 23rd, 2009
----------------------------
 o added constraint "type E.label = unit" to unlabeled graph data structure
 o viewGraph: new module viewGraph_utils; fixed compilation (gtkInit
   was missing; patch by Mehdi Dogguy)
 o configure: fixed bug under Cygwin (patch by Julien Bernet)
 o configure: look for lablgnomecanvas.cmxa when compiling in native code
 o Makefile: fixed make install-findlib when lablgtk and/or
   lablgnomecanvas not installed (patch by Peter Hawkins)

version 1.0, October 14th, 2008
-------------------------------
 o license: LGPL updated to version 2.1
 o ocamlgraph now requires ocaml 3.10 or higher
 o experimental: GTK-based graph viewer based on dot 
   (contribution of Anne Pacalet)
 o Makefile: 
     - fixed bug when lablgnomecanvas is not installed
     - fixed bug when ocamlfind is installed
     - patch to the build system for a DESTDIR (patch by Igor Galic)
     - "make -j" compliant
 o new function Blocks.after_unserialization in order to be able to safely
   serialize abstract vertices (see the FAQ)
 o Dot: 
     - fixed bug in the parsing of attributes
     - fixed bug in the parsing of subgraphs (patch by Anne Pacalet)
 o Oper: fixed bug in intersect