@@ -15,6 +15,28 @@
 (*                                                                        *)
 (**************************************************************************)
 
+open Graph
+
+module Int = struct 
+  type t = int 
+  let compare = compare 
+  let hash = Hashtbl.hash 
+  let equal = (=) 
+  let default = 0
+  let tostring v = string_of_int v
+end
+module G = Imperative.Graph.AbstractLabeled(Int)(Int)
+
+let () = 
+  let g = G.create () in
+  let v1 = G.V.create 1 in
+  let v2 = G.V.create 2 in
+  G.add_edge g v1 v2;
+  assert (G.mem_edge g v1 v2);
+  assert (G.mem_edge g v2 v1);
+  let g' = G.copy g in
+  assert (G.mem_edge g' v1 v2);
+  ()
 
 (*
 module Int = struct 
@@ -192,31 +214,31 @@ let l = K.spanningtree g
 let _ = List.iter (fun e -> printf "%d - %d\n" (G.E.src e) (G.E.dst e) ) l
 	*)
 
-open Graph
-module IntInt = struct
-  type t = int * int
-end
-module String = struct
-  type t = string
-  let compare = compare
-  let hash = Hashtbl.hash
-  let equal = (=)
-  let default = ""
-end
-module G = Imperative.Graph.AbstractLabeled(IntInt)(String)
-module Display = struct
-  include G
-  let vertex_name v = 
-    let x,y = V.label v in string_of_int x^","^string_of_int y
-  let graph_attributes _ = []
-  let default_vertex_attributes _ = []
-  let vertex_attributes _ = []
-  let default_edge_attributes _ = []
-  let edge_attributes e = let s = E.label e in [`Label s]
-  let get_subgraph _ = None
-end
-module Dot = Graphviz.Dot(Display)
-module Neato = Graphviz.Neato(Display)
+(* open Graph *)
+(* module IntInt = struct *)
+(*   type t = int * int *)
+(* end *)
+(* module String = struct *)
+(*   type t = string *)
+(*   let compare = compare *)
+(*   let hash = Hashtbl.hash *)
+(*   let equal = (=) *)
+(*   let default = "" *)
+(* end *)
+(* module G = Imperative.Graph.AbstractLabeled(IntInt)(String) *)
+(* module Display = struct *)
+(*   include G *)
+(*   let vertex_name v =  *)
+(*     let x,y = V.label v in string_of_int x^","^string_of_int y *)
+(*   let graph_attributes _ = [] *)
+(*   let default_vertex_attributes _ = [] *)
+(*   let vertex_attributes _ = [] *)
+(*   let default_edge_attributes _ = [] *)
+(*   let edge_attributes e = let s = E.label e in [`Label s] *)
+(*   let get_subgraph _ = None *)
+(* end *)
+(* module Dot = Graphviz.Dot(Display) *)
+(* module Neato = Graphviz.Neato(Display) *)
 
 (*
 module Int = struct 
